<resources>
    <string name="app_name">MoGuard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_update_information_failed">get update information failed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="downloading_">Downloading...</string>
    <string name="canceled">canceled</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="please_input_the_feature_s_new_name">please input the feature\'s new name</string>
    <string name="security">Security</string>
    <string name="phone_guard">Phone Guard</string>
    <string name="apps">Apps</string>
    <string name="task_manager">Task Manager</string>
    <string name="kill_virus">Kill Virus</string>
    <string name="network_manager">Network</string>
    <string name="system_optimize">System Optimize</string>
    <string name="advanced_tools">Advanced Tools</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_the_feature_s_name_">Change the feature\'s name?</string>
    <string name="network_is_not_available_">Network is not available...</string>
    <string name="mogurad">MoGuard</string>
    <string name="has_update">has update</string>
    <string name="confirm_to_update_">confirm to update?</string>
    <string name="are_you_sure_to_cancel_the_download_">Are you sure to cancel the download?</string>
    <string name="cancel_">Cancel?</string>
    <string name="confirm">Confirm</string>
    <string name="set_password">Set password</string>
    <string name="input_password">Input password</string>
    <string name="repeat_password">repeat password</string>
    <string name="the_password_and_the_repeat_password_are_not_the_same">the password and the repeat password are not the same</string>
    <string name="the_password_or_the_repeat_password_should_not_be_empty">the password or the repeat password should not be empty</string>
    <string name="password_is_wrong">password is wrong</string>
    <string name="title_activity_security_wizard">SecurityWizardActivity</string>
    <string name="first_process_setup_wizard">1.Setup Wizard 1/4</string>
    <string name="divide_line">divide line</string>
    <string name="image">image</string>
    <string name="alarm_when_sim_changed">Alarm when SIM changed</string>
    <string name="gps_tracker">GPS tracker</string>
    <string name="remote_erase_data">Remote erase data</string>
    <string name="remote_lock_screen">Remote lock screen</string>
    <string name="process">process</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome_to_use_security_setup_wizard">Welcome to use security setup wizard</string>
    <string name="alarm_will_ring_at_boot_time_when_sim_card_changed">Alarm will ring at boot time when SIM card changed</string>
    <string name="second_process_setup_wizard">2.Bind phone number 2/4</string>
    <string name="third_process_setup_wizard">3.Input phone number 3/4</string>
    <string name="fourth_process_setup_wizard">4.Congratulation,setup OK 4/4</string>
    <string name="bind">Bind</string>
    <string name="sim_unbound">SIM Unbound</string>
    <string name="sim_bound">SIM Bound</string>
    <string name="the_phone_will_send_sms_to_the_phone_number_when_sim_card_changed">the phone will send SMS to the phone number when SIM card changed</string>
    <string name="select">Select</string>
    <string name="you_had_better_launch_the_security">You had better launch the security</string>
    <string name="not_started">Not started</string>
    <string name="set">Set</string>
    <string name="title_activity_select_contact">SelectContactActivity</string>
    <string name="started">Started</string>
    <string name="bound_phone_number_is_">Bound phone number is:</string>
    <string name="start_the_setup_wizard">start the setup wizard</string>
    <string name="send_location_to_request_location">send *#location#* to request location</string>
    <string name="when_the_device_is_missing_send_code_to_the_phone_">When the device is missing,send code to the phone:</string>
    <string name="send_lock_to_request_lock_the_device">send *#lock#* to request lock the device</string>
    <string name="send_wipe_to_request_wipe_data">send *#wipe#* to request wipe data</string>
    <string name="send_alarm_to_request_alarm">send *#alarm#* to request alarm</string>
    <string name="title_activity_advanced_tools">AdvancedToolsActivity</string>
    <string name="query_phone_number_attribution">Query phone number attribution</string>
    <string name="title_activity_query_phone_number">QueryPhoneNumberActivity</string>
    <string name="query">Query</string>
    <string name="the_phone_number_s_length_should_not_less_than_">"the phone number's length should not less than "</string>
    <string name="the_phone_number_should_not_be_empty">the phone number should not be empty</string>
    <string name="area_">Area:</string>
    <string name="city_">City:</string>
    <string name="cardtype_">CardType:</string>
    <string name="no_result">No result</string>
    <string name="please_input_the_phone_number_or_area_number">Please input the phone number or area number</string>
    <string name="phone_nubmer_attribution_setup">Phone nubmer attribution setup</string>
    <string name="start_service">Start service</string>
    <string name="show_short_information">Show short information</string>
    <string name="show_detail_information">Show detail information</string>
    <string name="service_started">Service started</string>
    <string name="service_not_starts">Service not starts</string>
    <string name="select_phone_attribution_style">Select phone attribution style</string>
    <string name="select_phone_number_attribution_style_">Select phone number attribution style:</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="set_phone_attribution_position">Set phone attribution position</string>
    <string name="title_activity_phone_attribution_position">PhoneAttributionPositionActivity</string>
    <string name="phone_number_attribution_information">phone number attribution information</string>
    <string name="drag_to_the_position_you_like">drag to the position you like</string>
    <string name="phone_number_attribution_background">phone number attribution background</string>
    <string name="gray">Gray</string>
    <string name="white">White</string>
    <string name="orange">Orange</string>
    <string name="the_number_is_exists">the number is exists</string>
    <string name="title_activity_blacklist">BlacklistActivity</string>
    <string name="add">Add</string>
    <string name="blacklist">Blacklist</string>
    <string name="please_input_a_number_to_block">please input a number to block</string>
    <string name="add_a_number_to_blacklist">add a number to blacklist</string>
    <string name="add_success">add success</string>
    <string name="add_fail_the_number_may_already_exists">add fail,the number may already exists</string>
    <string name="are_you_sure_to_remove_the_blocking_number_">Are you sure to remove the blocking number?</string>
    <string name="delete_success">delete success</string>
    <string name="the_number_should_not_be_empty">the number should not be empty</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_the_number">update the number</string>
    <string name="input_the_new_number">input the new number</string>
    <string name="update_success">update success</string>
    <string name="update_fail_the_number_may_already_exist">update fail,the number may already exist</string>
    <string name="backup_sms">Backup SMS</string>
    <string name="restore_sms">Restore SMS</string>
    <string name="backuping_">Backuping...</string>
    <string name="current_progress_">Current progress:</string>
    <string name="restoring_">Restoring...</string>
    <string name="backup_success">backup success</string>
    <string name="restore_success">restore success</string>
    <string name="title_activity_app_manager">AppManagerActivity</string>
    <string name="app_manager">App Manager</string>
    <string name="loading_">Loading...</string>
    <string name="icon">Icon</string>
    <string name="run">Run</string>
    <string name="uninstall">Uninstall</string>
    <string name="share">Share</string>
    <string name="share_you_an_app_">share you an app:</string>
    <string name="can_t_run">can\'t run</string>
    <string name="system_app_the_app_forbid_the_operation">System app,the app forbid the operation</string>
    <string name="order_by_name">order by name</string>
    <string name="order_by_size">order by size</string>
    <string name="app_lock">App Lock</string>
    <string name="title_activity_add_app_to_lock_list">AddAppToLockListActivity</string>
    <string name="app_icon">app icon</string>
    <string name="add_app_lock">Add App Lock</string>
    <string name="the_selected_app_is_empty">the selected app is empty</string>
    <string name="are_you_sure_to_delete_">"Are you sure to delete "</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="please_input_the_password">Please input the password</string>
    <string name="enter">Enter</string>
    <string name="key_icon">key icon</string>
    <string name="the_password_should_not_be_empty">the password should not be empty</string>
    <string name="default_password_is_135246">Default password is 135246</string>
    <string name="please_input_the_new_password">please input the new password</string>
    <string name="save_success">save success</string>
    <string name="title_activity_task_manager">TaskManagerActivity</string>
    <string name="clean">Clean</string>
    <string name="setup">Setup</string>
    <string name="process_icon">process icon</string>
    <string name="title_activity_task_manager_settings">TaskManagerSettingsActivity</string>
    <string name="display_mode">Display mode</string>
    <string name="show_user_app_only">Show user app only</string>
    <string name="clean_mode">Clean mode</string>
    <string name="don_t_clean_when_locked">Don\'t clean when locked</string>
    <string name="show_user_system_app">Show user&amp;system app</string>
    <string name="don_t_clean_when_lock_screen">Don\'t clean when lock screen</string>
    <string name="clean_when_lock_screen">Clean when lock screen</string>
    <string name="title_activity_app_permissions">AppPermissionsActivity</string>
    <string name="package_name">Package name</string>
    <string name="permissions">Permissions</string>
    <string name="moguard">MoGuard</string>
    <string name="query_common_numbers">Query common numbers</string>
    <string name="title_activity_common_number">CommonNumberActivity</string>
    <string name="title_activity_network_manager">Network</string>
    <string name="label">Label</string>
    <string name="tx">Tx</string>
    <string name="rx">Rx</string>
    <string name="title_activity_system_optimize">SystemOptimize</string>
    <string name="codesize">codeSize</string>
    <string name="datasize">dataSize</string>
    <string name="cachesize">cacheSize</string>
    <string name="clear_external_cache">Clear external cache</string>
    <string name="title_activity_kill_virus">KillVirusActivity</string>
    <string name="no_virus_found">no virus found</string>
    <string name="found_">"found "</string>
    <string name="_virus">" virus"</string>
    <string name="_viruses">" viruses"</string>
    <string name="confirm_">Confirm?</string>
    <string name="are_you_sure_not_to_start_">Are you sure not to start?</string>
</resources>