<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecurityWizardActivity" >

    <TextView
        style="@style/setup_wizard_process_title"
        android:text="@string/first_process_setup_wizard" />

    <ImageView
        style="@style/divide_line"
        android:contentDescription="@string/divide_line" />

    <TextView
        style="@style/setup_wizard_title"
        android:text="@string/welcome_to_use_security_setup_wizard" />

    <TextView
        style="@style/security_wizard_feature"
        android:text="@string/alarm_when_sim_changed" >
    </TextView>

    <TextView
        style="@style/security_wizard_feature"
        android:text="@string/gps_tracker" >
    </TextView>

    <TextView
        style="@style/security_wizard_feature"
        android:text="@string/remote_erase_data" >
    </TextView>

    <TextView
        style="@style/security_wizard_feature"
        android:text="@string/remote_lock_screen" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageView
            style="@style/presence_online"
            android:contentDescription="@string/process"
            android:src="@android:drawable/presence_online" />

        <ImageView
            style="@style/presence_offline"
            android:contentDescription="@string/process"
            android:src="@android:drawable/presence_offline" />

        <ImageView
            style="@style/presence_offline"
            android:contentDescription="@string/process"
            android:src="@android:drawable/presence_offline" />

        <ImageView
            style="@style/presence_offline"
            android:contentDescription="@string/process"
            android:src="@android:drawable/presence_offline" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image"
            android:src="@drawable/setup1" />

        <Button style="@style/btn_next" android:onClick="next"/>
    </RelativeLayout>

</LinearLayout>